Added scroll-indicator(not working yet)

--- a/index.html
+++ b/index.html
@@ -165,6 +165,13 @@ $(document).ready(function(){
 	</script>
 </head>
 <body>
+	<div class="scroll-indicator">
+		<img src="img/scroll-indicator.png" alt="">
+		<img src="img/scroll-indicator.png" alt="">
+		<img src="img/scroll-indicator.png" alt="">
+		<img src="img/scroll-indicator.png" alt="">
+		<img src="img/scroll-indicator.png" alt="">
+	</div>
 	<div class="wrapper">
 		<div class="main">
 			<div class="content">
