added fixed footer

--- a/index.html
+++ b/index.html
@@ -415,10 +415,16 @@ $(document).ready(function(){
 
 
 
-		<div class="h-line"></div>
+		<div class="h-line footer-line"></div>
 
 
-		<div class="footer">
+		
+
+
+	</div>
+	<div class="footer-flex">
+	<div class="footer wrapper">
+	<div class="space"></div>
 			<div class="content">
 				<div class="links">
 					<p><a href="">Пользовательское соглашение</a> <mark class="br-desktop">|</mark><br class="br-mobile" /> <a href="">Политика конфиденциальности</a> <mark class="br-desktop">|</mark><br class="br-mobile" /> <a href="">Предупреждение о риске</a> <mark class="br-desktop">|</mark><br class="br-mobile" /> <a href="">Условия торговли</a><br/>
@@ -440,9 +446,7 @@ $(document).ready(function(){
 				</div>
 			</div>
 		</div>
-
-
-	</div>
+		</div>
 	
 </body>
 </html>
