--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@ $(document).ready(function(){
       });
 
 	$('.arrow-right').click(function(){
-		console.log("arrow right");
+		//console.log("arrow right");
 		$('.content-comments').slick('slickNext');
 	});
 	$('.arrow-left').click(function(){
-		console.log("arrow right");
+		//console.log("arrow right");
 		$('.content-comments').slick('slickPrev');
 	});
 
