--- a/index.html
+++ b/index.html
@@ -12,11 +12,14 @@
 	<link href="https://fonts.googleapis.com/css?family=Ubuntu:300,300i,400,400i,500,500i,700,700i&amp;subset=cyrillic" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="slick/slick.css"/>
 	<script type="text/javascript">
-	
+
 
 	$(window).scroll(function() {   
 
-	var st = $(this).scrollTop();  
+	var st = $(this).scrollTop();
+	$(".backgrounds").css({
+		"transform" : "translate(0%, " + st/30 + "%"
+	});  
 	//console.log(st);
 	if(st>=0 && st<600) {
 		$(".bullet").attr("src", "img/scroll-indicator.png");
@@ -325,6 +328,11 @@ $(document).ready(function(){
 	</script>
 </head>
 <body>
+<div class="backgrounds">
+	<img src="img/01.png" alt="">
+	<img src="img/02.png" alt="">
+	<img src="img/03.png" alt="">
+</div>
 	<div class="scroll-indicator">
 		<img src="img/scroll-indicator.png" alt="" class="bullet 1bull">
 		<img src="img/scroll-indicator.png" alt="" class="bullet 2bull">
@@ -605,6 +613,7 @@ $(document).ready(function(){
 
 
 	</div>
+	<div class="hidder">
 	<div class="footer-flex">
 	<div class="footer wrapper">
 	<div class="space"></div>
@@ -628,6 +637,7 @@ $(document).ready(function(){
 					<p>© 2010 — 2017, 770 capital</p>
 				</div>
 			</div>
+		</div>
 		</div>
 		</div>
 
