--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	var st = $(this).scrollTop();
 	$(".backgrounds").css({
-		"transform" : "translate(0%, " + st/30 + "%"
+		"transform" : "translate(0%, -" + st/120 + "%"
 	});  
 	//console.log(st);
 	if(st>=0 && st<600) {
