--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ $(window).bind('mousewheel', function(e){
 			$("html, body").stop().animate({scrollTop:1780}, 1780-st, 'swing');
 		}
 		if(st>=1600 && st<2600) {
-			$("html, body").stop().animate({scrollTop:2730}, 2730-st, 'swing');
+			$("html, body").stop().animate({scrollTop:2650}, 2650-st, 'swing');
 		}
 		if(st>=2600 && st<2900) {
 			$("html, body").stop().animate({scrollTop:3500}, 3500-st, 'swing');
@@ -97,7 +97,7 @@ $(window).bind('mousewheel', function(e){
 			$("html, body").stop().animate({scrollTop:1780}, st-1780, 'swing');
 		}
 		if(st>=2900) {
-			$("html, body").stop().animate({scrollTop:2730}, st-2730, 'swing');
+			$("html, body").stop().animate({scrollTop:2650}, st-2650, 'swing');
 		}
      }
 }
@@ -186,7 +186,7 @@ $(document).ready(function(){
 		$("html, body").stop().animate({scrollTop:1780}, 500, 'swing');
 	});
 	$(".4bull").click(function(){
-		$("html, body").stop().animate({scrollTop:2730}, 500, 'swing');
+		$("html, body").stop().animate({scrollTop:2650}, 500, 'swing');
 	});
 	$(".5bull").click(function(){
 		$("html, body").stop().animate({scrollTop:3500}, 500, 'swing');
@@ -591,7 +591,7 @@ $(document).ready(function(){
 
 		<div class="download">
 		<div class="img-icon">
-			<img src="img/icon.png" alt="" class="icon">
+			<img src="img/icon2.png" alt="" class="icon">
 		</div>
 			<div class="content">
 				<h2>Выгодное предложение:<br/><strong>5 видео уроков по online торговле абсолютно бесплатно!</strong></h2>
