--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@ if(!(ua.indexOf('Trident/7.0') + 1)) {
 	</script>
 </head>
 <body>
-<div class="super-wrapper">
+
 <div class="backgrounds">
 	<img src="img/01.png" alt="">
 	<img src="img/02.png" alt="">
@@ -437,20 +437,20 @@ if(!(ua.indexOf('Trident/7.0') + 1)) {
 				<h2 class="videoHeader">Первый урок смотрите прямо сейчас:</h2>
 
 				<div class="video">
-				<div class="v-line"></div>
+				<!--<div class="v-line"></div>-->
 					<iframe width="450" height="250" src="https://www.youtube.com/embed/nQ-X23ow9wU?controls=0&showinfo=0&iv_load_policy=3&modestbranding=1" frameborder="0"></iframe>
 				</div>
 
-				<img src="img/mobile-arrow-down.png" alt="" class="mobile-arrow-down">
+				<!--<img src="img/mobile-arrow-down.png" alt="" class="mobile-arrow-down">-->
 
-				<div class="img-icon">
+				<!--<div class="img-icon">
 					<img src="img/icon.png" alt="" class="icon">
-				</div>
+				</div>-->
 
-
+<h2 class="form-h2">Для доступа ко всем 5-ти урокам введите стандартные данные:</h2>
 				<div class="form">
 						<form action="">
-							<h2>Для доступа ко всем 5-ти урокам введите стандартные данные:</h2>
+							
 							<div class="fields">
 								<div class="field field-first-name">
 									<p width="117.69px">Как Ваше имя?</p>
@@ -647,13 +647,14 @@ if(!(ua.indexOf('Trident/7.0') + 1)) {
 
 		
 
-
+		<div class="third-block">
 		<div class="download">
 		<div class="img-icon">
-			<img src="img/icon2.png" alt="" class="icon">
+			<!--<img src="img/icon2.png" alt="" class="icon">-->
 		</div>
 			<div class="content">
-				<h2>Выгодное предложение:<br/><strong>5 видео уроков по online торговле абсолютно бесплатно!</strong></h2>
+			<h2>Обратите внимание!</h2>
+				<h2 class="second_h"><br/>5 видео уроков по online торговле <strong>абсолютно бесплатно!</strong></h2>
 				<input type="button" value="скачать видео уроки" id="download">				
 			</div>
 		</div>
@@ -683,24 +684,15 @@ if(!(ua.indexOf('Trident/7.0') + 1)) {
 				</div>
 			</div>
 		</div>
+		</div>
 
-
-
-		<div class="h-line footer-line"></div>
 
 
 		
 
 
-	</div>
+		<div class="footer">
 	
-
-		
-		</div>	
-		<div class="hidder">
-	<div class="footer-flex">
-	<div class="footer wrapper">
-	<div class="space"></div>
 			<div class="content">
 				<div class="links">
 					<p><a href="">Пользовательское соглашение</a> <mark class="br-desktop">|</mark><br class="br-mobile" /> <a href="">Политика конфиденциальности</a> <mark class="br-desktop">|</mark><br class="br-mobile" /> <a href="">Предупреждение о риске</a> <mark class="br-desktop">|</mark><br class="br-mobile" /> <a href="">Условия торговли</a><br/>
@@ -722,8 +714,17 @@ if(!(ua.indexOf('Trident/7.0') + 1)) {
 				</div>
 			</div>
 		</div>
-		</div>
-		</div>
+
+
+		
+
+
+	</div>
+	
+
+		
+			
+		
 		<script type="text/javascript" src="slick/slick.min.js"></script>
 
 </body>
