--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
 		if (st<850) {
 			$(".videoHeader").css("margin-top", st-450+80);
 			$(".form-h2").css("margin-top", 400-(st-450));
+			$(".wrapper").css("background-position-y", st-450);
 		}else {
 			$(".videoHeader").css("margin-top", 850-450+80);
 			$(".form-h2").css("margin-top", 400-(850-450));
@@ -445,7 +446,7 @@ if(!(ua.indexOf('Trident/7.0') + 1)) {
 						</div>			
 				</div>
 
-				<h1>Получите бесплатную коллекцию<br/><strong>из пяти видео уроков <br class="br-desktop"> по online торговле<sup>*</sup></strong></h1>
+				<h1>Получите бесплатную коллекцию<br/><strong>из пяти видео уроков <br class="br-desktop"> по online торговле<sup><strong class="star">*</strong></sup></strong></h1>
 				<div class="youtubeLogo">
 					<img src="img/youtube.png" alt="">
 				</div>
