--- a/index.html
+++ b/index.html
@@ -59,11 +59,13 @@
 		}else {
 			$(".videoHeader").css("margin-top", 850-450+80);
 			$(".form-h2").css("margin-top", 400-(850-450));
+			$(".wrapper").css("background-position-y", 850-450);
 		}
 
 	} else {
 		$(".videoHeader").css("margin-top", 450-450+80);
 			$(".form-h2").css("margin-top", 400-(450-450));
+			$(".wrapper").css("background-position-y", 450-450);
 	}
 
 
