--- a/index.html
+++ b/index.html
@@ -456,7 +456,8 @@ if(!(ua.indexOf('Trident/7.0') + 1)) {
 						</div>			
 				</div>
 
-				<h1>Получите бесплатную коллекцию<br/><strong>из пяти видео уроков <br class="br-desktop"> по online торговле<sup><strong class="star">*</strong></sup></strong></h1>
+				<h1>Получите бесплатную коллекцию<br/></h1>
+				<h1 class="second_h1"><strong>из пяти видео уроков <br class="br-desktop"> по online торговле<sup><strong class="star">*</strong></sup></strong></h1>
 				<div class="youtubeLogo">
 					<img src="img/youtube.png" alt="">
 				</div>
