--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 	}
 
 
-$(window).bind('mousewheel', function(e){
+/*$(window).bind('mousewheel', function(e){
 	console.log("mousewheel Bind");
 
 	var st = $(this).scrollTop();  
@@ -174,7 +174,7 @@ $(window).bind('mousewheel', function(e){
 }
      //prevent page fom scrolling
      //return false;
- });
+ });*/
 
 
 
