--- a/index.html
+++ b/index.html
@@ -540,14 +540,15 @@ if(!(ua.indexOf('Trident/7.0') + 1)) {
 
 				<div class="header">
 
-					<img src="img/logo.png" alt="" class="logo">
+					<img src="img/logo.png" alt="" class="logo logo-desktop">
+					<img src="img/logo-mobile.png" alt="" class="logo logo-mobile">
 						<div class="contact">
 							<p class="question">Возникли вопросы?</p>
 							<a href="tel:+388005056704"><p class="phone">8 800 505 67 04</p></a>
 						</div>			
 				</div>
 
-				<h1>Получите бесплатную коллекцию<br/></h1>
+				<h1>Получите <br class="br420"> бесплатную коллекцию<br/></h1>
 				<h1 class="second_h1"><strong>из пяти видео уроков <br class="br-desktop"> по online торговле<sup><strong class="star">*</strong></sup></strong></h1>
 				<div class="youtubeLogo">
 					<img src="img/youtube.png" alt="">
@@ -560,7 +561,7 @@ if(!(ua.indexOf('Trident/7.0') + 1)) {
 					<iframe width="450" height="250" src="https://www.youtube.com/embed/nQ-X23ow9wU?controls=0&showinfo=0&iv_load_policy=3&modestbranding=1" frameborder="0"></iframe>
 				</div>
 
-				<!--<img src="img/mobile-arrow-down.png" alt="" class="mobile-arrow-down">-->
+				<img src="img/mobile-arrow-down.png" alt="" class="mobile-arrow-down">
 
 				<!--<div class="img-icon">
 					<img src="img/icon.png" alt="" class="icon">
