--- a/index.html
+++ b/index.html
@@ -762,7 +762,7 @@ if(!(ua.indexOf('Trident/7.0') + 1)) {
 			</div>
 		</div>
 
-		<div class="h-line mobile"></div>
+		<div class="h-line mobile" style="margin-top: 60px;"></div>
 		<div class="v-line"></div> 
 
 		
@@ -774,12 +774,12 @@ if(!(ua.indexOf('Trident/7.0') + 1)) {
 		</div>
 			<div class="content">
 			<h2>Обратите внимание!</h2>
-				<h2 class="second_h"><br/>5 видео уроков по online торговле <strong>абсолютно бесплатно!</strong></h2>
+				<h2 class="second_h"><br/>5 видео уроков <br class="br420"> по online торговле<br class="br420"> <strong>абсолютно бесплатно!</strong></h2>
 				<input type="button" value="скачать видео уроки" id="download">				
 			</div>
 		</div>
 
-		<div class="h-line mobile"></div>
+		<div class="h-line mobile" style="margin-top: 105px;"></div>
 		<div class="v-line"></div>
 
 
@@ -808,7 +808,7 @@ if(!(ua.indexOf('Trident/7.0') + 1)) {
 
 
 
-		
+		<div class="h-line mobile" style="margin-top: 60px;"></div>
 
 
 		<div class="footer">
